# raycast-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
data/sprites/static/column/: column_64.rtx
data/sprites/static/lamp/: lamp_64.rtx
data/textures/: ammocrate.rtx  barrel1.rtx  barrel2.rtx  brick.rtx  brickpile.rtx  chess.rtx  cobbles.rtx  concrete.rtx  crosshatch.rtx  grass.rtx  keycard.rtx  lamp.rtx  metal1.rtx  metal2.rtx  octopus.rtx  planter.rtx  robot0.rtx  robot1.rtx  robot2.rtx  robot3.rtx  robot4.rtx  robot5.rtx  robot6.rtx  rock1.rtx  rock2.rtx  rock3.rtx  rock4.rtx  rust.rtx  soil1.rtx  soil2.rtx  tiles.rtx  wood1.rtx  wood2.rtx
data/textures/brick/: brick_128.rtx  brick_256.rtx  brick_64.rtx
data/textures/concrete/: concrete_64.rtx
data/textures/metal/: metal_64.rtx
include/crossplatform/: crossplatform_file.h  crossplatform_time.h
include/engine/: engine_color.h  engine_draw.h  engine_logic.h  engine_math.h  engine_rayengine.h  engine_resource.h  engine_screen.h  engine_subsystems.h  engine_types.h
include/gridengine/: gridengine_render.h  gridengine_scene.h  gridengine_testscenes.h
include/time/: time_helper.h
include/utils/: utils_list.h  utils_string.h
src/: CMakeLists.txt
src/crossplatform/: CMakeLists.txt  crossplatform_file.c  crossplatform_time.c
src/engine/: CMakeLists.txt  engine_color.c  engine_draw.c  engine_logic.c  engine_math.c  engine_rayengine.c  engine_resource.c  engine_screen.c  engine_types.c
src/enginedemo/: CMakeLists.txt  main.c
src/gridengine/: CMakeLists.txt  gridengine_render.c  gridengine_scene.c  gridengine_testscenes.c
src/linedemo/: main.c
src/rectdemo/: CMakeLists.txt  main.c
src/rpi/: CMakeLists.txt  rpi_subsystem.c
src/sceneview/: main.c
src/sdl/: CMakeLists.txt  sdl_subsystem.c
src/shapefilegen/: main.c
src/time/: CMakeLists.txt  time_helper.c
src/utils/: CMakeLists.txt  utils_list.c  utils_string.c
tests/: CMakeLists.txt
tests/drawprofile/: CMakeLists.txt  main.c
tests/inputsub/: CMakeLists.txt  main.c
tests/intrinsics/: CMakeLists.txt  main.c
tests/linedemo/: CMakeLists.txt  main.c
tests/maptest/: CMakeLists.txt  main.c
tests/mathtests/: CMakeLists.txt  main.c
tests/rayverts/: CMakeLists.txt  main.c
tests/rectdemo/: CMakeLists.txt  main.c
tests/rendersub/: CMakeLists.txt  main.c
tests/speedbench/: CMakeLists.txt  benchlogs.txt  main.c
tests/steprender/: CMakeLists.txt  main.c
tests/teartest/: CMakeLists.txt  main.c
tests/transformtest/: CMakeLists.txt  main.c
tests/utiltests/: CMakeLists.txt  main.c
tools/: CMakeLists.txt
tools/sceneview/: CMakeLists.txt  main.c
tools/shapefilegen/: CMakeLists.txt  main.c
tools/textureconv/: CMakeLists.txt  main.c
