cmake_minimum_required(VERSION 3.8)

add_subdirectory("inputsub")
add_subdirectory("rendersub")
add_subdirectory("drawprofile")
add_subdirectory("speedbench")
add_subdirectory("teartest")
add_subdirectory("mathtests")
add_subdirectory("utiltests")
add_subdirectory("maptest")
add_subdirectory("transformtest")
add_subdirectory("rayverts")
add_subdirectory("linedemo")
add_subdirectory("rectdemo")
add_subdirectory("steprender")
